--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "dev": "nodemon src/index.ts\"",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "format": "prettier --write .",
+    "lint": "eslint src/**/*.ts",
+    "fix": "eslint src/**/*.ts --fix"
+    
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm lint"
+    }
   },
   "author": "noahbuilds",
   "license": "ISC",
@@ -43,6 +52,7 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
