--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint src/**/*.ts"
+      "pre-commit": "eslint src/**/*.ts --fix && git add -A ."
     }
   },
   "author": "noahbuilds",
